syntax = "proto3";
package MessageShared;

message mCacheRequest {
  string _key = 1;
  int32 pageSize = 2;
  int32 pageNumber = 3;
  string jsonConditions = 4;
  bool hasCache = 5;
}

message mCacheReply {
  bool ok = 1;
  mCacheRequest request = 2;
  string output = 3;
  int32 countResult = 4;
  int32 totalItems = 5;
}

service mCacheService {
  rpc Send (mCacheRequest) returns (mCacheReply) {}
}