syntax = "proto3";
package MessageShared;

message mParameter {
   string key = 1;
   string value = 2;
}

message mParameterCollection {
   mParameter items = 1;
}

message mDbUpdateRequest {
  int32 type = 1;
  string nameStore = 2;
  mParameterCollection parameters = 3;
}

message mDbUpdateReply {
  string id = 1;
  bool ok = 2;
  mDbUpdateRequest request = 3;
  string message = 4;
}

service mDbUpdateService {
  rpc Send (mDbUpdateRequest) returns (mDbUpdateReply) {}
}